--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Build and push frontend
       uses: docker/build-push-action@v5
       with:
-        context: .
+        context: ./frontend
         file: ./frontend/Dockerfile
         push: true
         tags: ghcr.io/${{ github.repository_owner }}/frontend:latest
@@ -37,7 +37,7 @@ jobs:
     - name: Build and push backend
       uses: docker/build-push-action@v5
       with:
-        context: .
+        context: ./backend
         file: ./backend/Dockerfile
         push: true
         tags: ghcr.io/${{ github.repository_owner }}/backend:latest
