--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,16 +29,16 @@ jobs:
     - name: Build and push frontend
       uses: docker/build-push-action@v5
       with:
-        context: /app/frontend
-        file: /app/frontend/Dockerfile
+        context: ./frontend/
+        file: ./frontend/Dockerfile
         push: true
         tags: ghcr.io/${{ github.repository_owner }}/frontend:latest
     
     - name: Build and push backend
       uses: docker/build-push-action@v5
       with:
-        context: /app/backend
-        file: /app/backend/Dockerfile
+        context: ./backend/
+        file: ./backend/Dockerfile
         push: true
         tags: ghcr.io/${{ github.repository_owner }}/backend:latest
 
