--- a/backend/package.json
+++ b/backend/package.json
@@ -6,9 +6,9 @@
     "start": "node src/index.js"
   },
   "dependencies": {
+    "@remla24-team12/lib-version": "^1.0.0",
     "axios": "^1.6.8",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "lib-version": "github:remla24-team12/lib-version#v0.0.3"
+    "express": "^4.17.1"
   }
 }
