--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,9 +19,7 @@ jobs:
     - name: Create .npmrc file
       run: |
         echo "@remla24-team12:registry=https://npm.pkg.github.com/" > ./backend/.npmrc
-        echo "//npm.pkg.github.com/:_authToken=${{ secrets.NPM_TOKEN }}" >> ./backend/.npmrc
-      env:
-        NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        echo "//npm.pkg.github.com/:_authToken=${{ secrets.REMLA_TOKEN }}" >> ./backend/.npmrc
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
