--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - ./backend:/app
     environment:
       - NODE_ENV=development
+      - MODEL_SERVICE_URL=http://model-service:5000/
 
   frontend:
     build: ./frontend
@@ -17,3 +18,4 @@ services:
       - ./frontend:/app
     environment:
       - NODE_ENV=development
+      - APP_API_URL=http://localhost:3000
