Add env variables for endpoints

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -10,7 +10,7 @@ RUN npm install
 
 COPY . /app
 
-ENV APP_API_URL=http://localhost:8080
+ENV VUE_APP_API_URL=http://localhost:8080
 
 EXPOSE 8080
 
